<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="masson.reynoso.tofi.ui.inicio.InicioFragment"
        android:label="@string/title_Inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="masson.reynoso.tofi.ui.buscar.BuscarFragment"
        android:label="@string/title_Buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/navigation_biblioteca"
        android:name="masson.reynoso.tofi.ui.biblioteca.BibliotecaFragment"
        android:label="@string/title_Biblioteca"
        tools:layout="@layout/fragment_biblioteca" />

    <fragment
        android:id="@+id/navigation_actividades"
        android:name="masson.reynoso.tofi.ui.actividades.ActividadesFragment"
        android:label="@string/title_Actvidades"
        tools:layout="@layout/fragment_actividades" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="masson.reynoso.tofi.ui.perfil.PerfilFragment"
        android:label="@string/title_Perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>