<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"
    tools:context=".CreateaccActivity">

    <TextView
        android:id="@+id/text_crea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="Crea tu cuenta" />

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:background="@drawable/borde_redondo" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/strEmail"
        android:background="@drawable/borde_redondo" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:background="@drawable/borde_redondo"/>

    <EditText
        android:id="@+id/inputPass2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeatPass"
        android:background="@drawable/borde_redondo"/>

    <RadioButton
        android:id="@+id/rbRecordarUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="45dp"
        android:layout_gravity="center"
        android:text="@string/strRecordarUser" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="100dp"
        android:text="@string/btnRegistro"/>

</LinearLayout>